--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.redis.jedis.pool.min-idle=0
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
 spring.redis.jedis.pool.max-wait=-1ms
 
-spring.servlet.multipart.max-file-size=100Mb
-spring.servlet.multipart.max-request-size=100Mb
+spring.servlet.multipart.max-file-size=300Mb
+spring.servlet.multipart.max-request-size=300Mb
+#打印sql语句
+logging.level.com.example.demo.map=debug
